Add support for connecting a single junctionpoint and endpoint in a connectiongroup

--- a/join_close_ends.ipynb
+++ b/join_close_ends.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "5162c7e0",
    "metadata": {},
    "outputs": [],
@@ -76,86 +76,17 @@
     "    position: tuple[int, int]\n",
     "\n",
     "\n",
+    "class Junctionpoint(BaseModel):\n",
+    "    id: int\n",
+    "    position: tuple[int, int]\n",
+    "\n",
+    "\n",
     "class ConnectionGroup(BaseModel):\n",
     "    id: int\n",
     "    endpoints: dict[int, Endpoint] = Field(default_factory=dict)\n",
+    "    junctionpoints: dict[int, Junctionpoint] = Field(default_factory=dict)\n",
     "    hard_connected_endpoints: list[tuple[int, int, float]] = Field(default_factory=list)\n",
-    "    close_endpoint_pairs: list[tuple[int, int]] = Field(default_factory=list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f3f67da",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#     # If there is only one pair in the group, just connect it.\n",
-    "#     if len(group_of_pairs) == 1:\n",
-    "#         pair = group_of_pairs[0]\n",
-    "#         endpoint_1, endpoint_2, distance_nm = pair\n",
-    "\n",
-    "#         path, cost, distance_nm = connect_endpoints_with_best_path(\n",
-    "#             image=image,\n",
-    "#             mask=mask,\n",
-    "#             p2nm=p2nm,\n",
-    "#             endpoint_1=(endpoint_1[0], endpoint_1[1]),\n",
-    "#             endpoint_2=(endpoint_2[0], endpoint_2[1]),\n",
-    "#             endpoint_connection_cost_map_height_maximum=endpoint_connection_cost_map_height_maximum,\n",
-    "#         )\n",
-    "\n",
-    "#         path_mask = np.zeros_like(mask, dtype=bool)\n",
-    "#         # Set the path to True\n",
-    "#         for y, x in path:\n",
-    "#             path_mask[y, x] = True\n",
-    "#         # Calculate the dilation iterations needed to reach the mean mask width\n",
-    "#         dilation_radius = int(np.ceil(mean_mask_width_px / 2))\n",
-    "#         dilated_path_array = ndimage.binary_dilation(\n",
-    "#             path_mask,\n",
-    "#             iterations=dilation_radius,\n",
-    "#         )\n",
-    "\n",
-    "#         # Add the dilated path to the whole mask\n",
-    "#         mask = mask | dilated_path_array\n",
-    "\n",
-    "#         # Update the skeleton to include the path\n",
-    "#         for y, x in path:\n",
-    "#             skeleton[y, x] = True\n",
-    "\n",
-    "#         continue  # move to next group\n",
-    "\n",
-    "#     # For groups with multiple pairs, we need to find a way to connect all endpoints together.\n",
-    "\n",
-    "#     # find the hard-connected endpoints in this group, defined as the endpoints that are connected via the\n",
-    "#     # skeleton already, within a configurable hard connection distance.\n",
-    "#     endpoint_hard_connection_distance_px = int(endpoint_hard_connection_distance_nm / p2nm)\n",
-    "\n",
-    "# #     path_mask = np.zeros_like(mask, dtype=bool)\n",
-    "# #     # Set the path to True\n",
-    "# #     for y, x in path:\n",
-    "# #         path_mask[y, x] = True\n",
-    "# #     # Calculate the dilation iterations needed to reach the mean mask width\n",
-    "# #     dilation_radius = int(np.ceil(mean_mask_width_px / 2))\n",
-    "# #     dilated_path_array = ndimage.binary_dilation(\n",
-    "# #         path_mask,\n",
-    "# #         iterations=dilation_radius,\n",
-    "# #     )\n",
-    "\n",
-    "# #     # Add the dilated path to the whole mask\n",
-    "# #     mask = mask | dilated_path_array\n",
-    "\n",
-    "# #     # Update the skeleton to include the path\n",
-    "# #     for y, x in path:\n",
-    "# #         skeleton[y, x] = True\n",
-    "\n",
-    "# # fig, ax = plt.subplots(figsize=(20, 20))\n",
-    "# # plt.imshow(image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
-    "# # grain_mask_mask = np.ma.masked_where(~mask, mask)\n",
-    "# # plt.imshow(grain_mask_mask, cmap=\"Blues_r\", alpha=0.3)\n",
-    "# # skeleton_mask = np.ma.masked_where(~skeleton.astype(bool), skeleton)\n",
-    "# # plt.imshow(skeleton_mask, cmap=\"viridis\", alpha=0.7)\n",
-    "# # plt.title(\"skeleton after connecting loose ends\")\n",
-    "# # plt.show()"
+    "    close_connectionpoint_pairs: list[tuple[int, int]] = Field(default_factory=list)"
    ]
   },
   {
@@ -267,22 +198,22 @@
     "    return filled_mask\n",
     "\n",
     "\n",
-    "def group_endpoints(\n",
-    "    endpoints: dict[int, Endpoint], close_pairs: list[int, int, float], draw_graph: bool = False\n",
+    "def group_connectionpoints(\n",
+    "    connectionpoints: dict[int, Endpoint | Junctionpoint], close_pairs: list[int, int, float], draw_graph: bool = False\n",
     ") -> dict[int, ConnectionGroup]:\n",
     "    \"\"\"\n",
-    "    Group endpoints into connection groups based on interconnections.\n",
+    "    Group connectionpoints into connection groups based on interconnections.\n",
     "    \"\"\"\n",
     "    # Split the graph into connected groups\n",
     "\n",
     "    # Create a graph\n",
     "    G = nx.Graph()\n",
     "    # Add the nodes (endpoints) as endpoint IDs\n",
-    "    for endpoint_index, endpoint in endpoints.items():\n",
-    "        G.add_node(endpoint_index)\n",
+    "    for connectionpoint_index, _connectionpoint in connectionpoints.items():\n",
+    "        G.add_node(connectionpoint_index)\n",
     "    # Add edges for each close pair (as endpoint IDs)\n",
-    "    for endpoint_1_index, endpoint_2_index, distance_nm in close_pairs:\n",
-    "        G.add_edge(endpoint_1_index, endpoint_2_index)\n",
+    "    for connectionpoint_1_index, connectionpoint_2_index, _distance_nm in close_pairs:\n",
+    "        G.add_edge(connectionpoint_1_index, connectionpoint_2_index)\n",
     "\n",
     "    # draw it\n",
     "    if draw_graph:\n",
@@ -290,21 +221,37 @@
     "        plt.show()\n",
     "\n",
     "    # Get networkx to find connected components\n",
-    "    connected_components = list(nx.connected_components(G))\n",
+    "    connected_components: list[set[int]] = list(nx.connected_components(G))\n",
+    "\n",
     "    # Create ConnectionGroup objects for each connected component\n",
     "    connection_groups: dict[int, ConnectionGroup] = {}\n",
     "    for group_id, component in enumerate(connected_components):\n",
-    "        group_endpoints = {endpoint_index: endpoints[endpoint_index] for endpoint_index in component}\n",
+    "        connectionpoints_group = {\n",
+    "            connectionpoint_index: connectionpoints[connectionpoint_index] for connectionpoint_index in component\n",
+    "        }\n",
     "        # Get the close pairs that are within this component\n",
     "        group_close_pairs = [\n",
-    "            (endpoint_1_index, endpoint_2_index)\n",
-    "            for endpoint_1_index, endpoint_2_index, _distance_nm in close_pairs\n",
-    "            if endpoint_1_index in component and endpoint_2_index in component\n",
+    "            (connectionpoint_1_index, connectionpoint_2_index)\n",
+    "            for connectionpoint_1_index, connectionpoint_2_index, _distance_nm in close_pairs\n",
+    "            if connectionpoint_1_index in component and connectionpoint_2_index in component\n",
     "        ]\n",
+    "        # Create dictionaries of endpoints and junctionpoints, since they have been combined and we need to separate them\n",
+    "        # again\n",
+    "        group_endpoints = {\n",
+    "            connectionpoint_index: connectionpoint_instance\n",
+    "            for connectionpoint_index, connectionpoint_instance in connectionpoints_group.items()\n",
+    "            if isinstance(connectionpoint_instance, Endpoint)\n",
+    "        }\n",
+    "        group_junctionpoints = {\n",
+    "            connectionpoint_index: connectionpoint_instance\n",
+    "            for connectionpoint_index, connectionpoint_instance in connectionpoints_group.items()\n",
+    "            if isinstance(connectionpoint_instance, Junctionpoint)\n",
+    "        }\n",
     "        connection_group = ConnectionGroup(\n",
     "            id=group_id,\n",
     "            endpoints=group_endpoints,\n",
-    "            close_endpoint_pairs=group_close_pairs,\n",
+    "            junctionpoints=group_junctionpoints,\n",
+    "            close_connectionpoint_pairs=group_close_pairs,\n",
     "        )\n",
     "        connection_groups[group_id] = connection_group\n",
     "    return connection_groups\n",
@@ -385,10 +332,7 @@
     "for filename, file_data in loaded_files.items():\n",
     "\n",
     "    # Let's focus on this one file for now.\n",
-    "    # if filename != \"20251031_nicked_picoz_8ng_nicl.0_00062\":\n",
-    "    #     continue\n",
-    "\n",
-    "    if filename != \"20251031_nicked_picoz_8ng_nicl.0_00083\":\n",
+    "    if filename != \"20251031_SCpicoz_8ng_nicl.0_00029\":\n",
     "        continue\n",
     "\n",
     "    print(f\"processing file: {filename}\")\n",
@@ -440,16 +384,6 @@
     "\n",
     "    # Now to find the skeleton endpoints and connect close ones.\n",
     "    convolved_skeleton = convolve_skeleton(skeleton=skeleton)\n",
-    "    # Get the endpoints, value = 2\n",
-    "    endpoint_coords = np.argwhere(convolved_skeleton == 2)\n",
-    "    print(\"endpoints:\")\n",
-    "    print(endpoint_coords)\n",
-    "\n",
-    "    # construct list of Endpoint objects\n",
-    "    endpoints: dict[int, Endpoint] = {}\n",
-    "    for endpoint_index, coord in enumerate(endpoint_coords):\n",
-    "        endpoint = Endpoint(id=endpoint_index, position=(coord[0], coord[1]))\n",
-    "        endpoints[endpoint_index] = endpoint\n",
     "\n",
     "    fig, ax = plt.subplots(figsize=(20, 20))\n",
     "    plt.imshow(image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
@@ -459,42 +393,68 @@
     "    plt.imshow(skeleton_mask, cmap=\"viridis\", alpha=0.7)\n",
     "    plt.show()\n",
     "\n",
-    "    # For each endpoint, determine if any others are close enough to connect.\n",
-    "    nearby_endpoint_pairs: list[tuple[int, int, float]] = []\n",
-    "    for i, endpoint_1_coords in endpoints.items():\n",
-    "        for j, endpoint_2_coords in endpoints.items():\n",
+    "    # Get the endpoints, value = 2\n",
+    "    endpoint_coords = np.argwhere(convolved_skeleton == 2)\n",
+    "    print(\"endpoints:\")\n",
+    "    print(endpoint_coords)\n",
+    "    # Get the junctions, value = 3\n",
+    "    junction_coords = np.argwhere(convolved_skeleton == 3)\n",
+    "    print(\"junctions:\")\n",
+    "    print(junction_coords)\n",
+    "\n",
+    "    # Construct dictionary of connectionpoints\n",
+    "    connectionpoints: dict[int, Endpoint | Junctionpoint] = {}\n",
+    "    connectionpoint_index = 0\n",
+    "    for endpoint_coords in endpoint_coords:\n",
+    "        endpoint = Endpoint(id=connectionpoint_index, position=(endpoint_coords[0], endpoint_coords[1]))\n",
+    "        connectionpoints[connectionpoint_index] = endpoint\n",
+    "        connectionpoint_index += 1\n",
+    "    for junction_coords in junction_coords:\n",
+    "        junctionpoint = Junctionpoint(id=connectionpoint_index, position=(junction_coords[0], junction_coords[1]))\n",
+    "        connectionpoints[connectionpoint_index] = junctionpoint\n",
+    "        connectionpoint_index += 1\n",
+    "\n",
+    "    # For each connectionpoint, determine if any others are close enough to connect.\n",
+    "    nearby_connectionpoint_pairs: list[tuple[int, int, float]] = []\n",
+    "    for i, connectionpoint_1_coords in connectionpoints.items():\n",
+    "        for j, connectionpoint_2_coords in connectionpoints.items():\n",
     "            if i >= j:\n",
     "                continue  # avoid double counting\n",
     "            distance_nm = np.linalg.norm(\n",
-    "                (np.array(endpoint_1_coords.position) - np.array(endpoint_2_coords.position)) * p2nm\n",
+    "                (np.array(connectionpoint_1_coords.position) - np.array(connectionpoint_2_coords.position)) * p2nm\n",
     "            )\n",
     "            if distance_nm <= endpoint_connection_distance_nm:\n",
-    "                nearby_endpoint_pairs.append((endpoint_1_coords.id, endpoint_2_coords.id, distance_nm))\n",
+    "                nearby_connectionpoint_pairs.append(\n",
+    "                    (connectionpoint_1_coords.id, connectionpoint_2_coords.id, distance_nm)\n",
+    "                )\n",
     "\n",
     "    # Group nearby endpoint pairs into connection groups\n",
-    "    connection_groups = group_endpoints(endpoints=endpoints, close_pairs=nearby_endpoint_pairs)\n",
+    "    connection_groups = group_connectionpoints(\n",
+    "        connectionpoints=connectionpoints, close_pairs=nearby_connectionpoint_pairs\n",
+    "    )\n",
     "    print(f\"connection groups:\")\n",
     "    print(connection_groups)\n",
     "\n",
     "    # Now consider each group and decide how to connect them.\n",
     "\n",
     "    for group_id, connection_group in connection_groups.items():\n",
-    "        print(f\"Processing connection group {group_id} with endpoints: {connection_group.endpoints}\")\n",
+    "        print(\n",
+    "            f\"Processing connection group {group_id} with endpoints: {connection_group.endpoints} and junctions: {connection_group.junctionpoints}\"\n",
+    "        )\n",
     "\n",
-    "        # If there are only two endpoints in the group, we can directly connect them.\n",
-    "        if len(connection_group.endpoints) == 2:\n",
+    "        # If there is one junctionpoint and one endpoint, then connect them directly.\n",
+    "        if len(connection_group.junctionpoints) == 1 and len(connection_group.endpoints) == 1:\n",
+    "            endpoint_id = list(connection_group.endpoints.keys())[0]\n",
+    "            junctionpoint_id = list(connection_group.junctionpoints.keys())[0]\n",
+    "            endpoint_coord = connection_group.endpoints[endpoint_id].position\n",
+    "            junctionpoint_coord = connection_group.junctionpoints[junctionpoint_id].position\n",
     "\n",
-    "            pair = connection_group.close_endpoint_pairs[0]\n",
-    "            endpoint_1_id, endpoint_2_id = pair\n",
-    "            endpoint_1_coords = connection_group.endpoints[endpoint_1_id]\n",
-    "            endpoint_2_coords = connection_group.endpoints[endpoint_2_id]\n",
-    "\n",
-    "            path, cost, distance_nm = connect_endpoints_with_best_path(\n",
+    "            path, _connection_cost, _connection_distance_nm = connect_endpoints_with_best_path(\n",
     "                image=image,\n",
     "                mask=mask,\n",
     "                p2nm=p2nm,\n",
-    "                endpoint_1_coords=endpoint_1_coords.position,\n",
-    "                endpoint_2_coords=endpoint_2_coords.position,\n",
+    "                endpoint_1_coords=endpoint_coords,\n",
+    "                endpoint_2_coords=junctionpoint_coord,\n",
     "                endpoint_connection_cost_map_height_maximum=endpoint_connection_cost_map_height_maximum,\n",
     "            )\n",
     "\n",
@@ -505,7 +465,36 @@
     "            # Fill the mask gap using the path\n",
     "            mask = fill_mask_gap_using_path(\n",
     "                mask=mask,\n",
+    "                path=path,\n",
+    "                mean_mask_pixel_width=mean_mask_width_px,\n",
+    "            )\n",
+    "            # done with this group, move on\n",
+    "            continue\n",
+    "\n",
+    "        # If there are only two endpoints and no junctions in the group, we can directly connect them.\n",
+    "        if len(connection_group.endpoints) == 2 and len(connection_group.junctionpoints) == 0:\n",
+    "\n",
+    "            pair = connection_group.close_connectionpoint_pairs[0]\n",
+    "            endpoint_1_id, endpoint_2_id = pair\n",
+    "            connectionpoint_1_coords = connection_group.endpoints[endpoint_1_id]\n",
+    "            connectionpoint_2_coords = connection_group.endpoints[endpoint_2_id]\n",
+    "\n",
+    "            path, _connection_cost, _connection_distance_nm = connect_endpoints_with_best_path(\n",
+    "                image=image,\n",
+    "                mask=mask,\n",
     "                p2nm=p2nm,\n",
+    "                endpoint_1_coords=connectionpoint_1_coords.position,\n",
+    "                endpoint_2_coords=connectionpoint_2_coords.position,\n",
+    "                endpoint_connection_cost_map_height_maximum=endpoint_connection_cost_map_height_maximum,\n",
+    "            )\n",
+    "\n",
+    "            # Update the skeleton to include the path\n",
+    "            for y, x in path:\n",
+    "                skeleton[y, x] = True\n",
+    "\n",
+    "            # Fill the mask gap using the path\n",
+    "            mask = fill_mask_gap_using_path(\n",
+    "                mask=mask,\n",
     "                path=path,\n",
     "                mean_mask_pixel_width=mean_mask_width_px,\n",
     "            )\n",
@@ -513,7 +502,8 @@
     "            continue\n",
     "\n",
     "        # for groups with more than two endpoints, we need more analysis.\n",
-    "        if len(connection_group.endpoints) == 4:\n",
+    "        # If there are four endpoints and no junctionpoints, then we can try to connect them.\n",
+    "        if len(connection_group.endpoints) == 4 and len(connection_group.junctionpoints) == 0:\n",
     "\n",
     "            # We need to identify the hard-connected endpoints in the group, defined as those endpoints that are\n",
     "            # connected via the skeleton already within a configurable distance.\n",
@@ -649,8 +639,9 @@
     "            # done with this group, move on\n",
     "            continue\n",
     "\n",
-    "        raise NotImplementedError(\n",
-    "            f\"Connection groups with {len(connection_group.endpoints)} endpoints not yet implemented.\"\n",
+    "        print(\n",
+    "            f\"Skipping: connection group {group_id} with {len(connection_group.endpoints)} endpoints\"\n",
+    "            f\"and {len(connection_group.junctionpoints)} junctionpoints not yet implemented.\"\n",
     "        )\n",
     "\n",
     "    fig, ax = plt.subplots(figsize=(20, 20))\n",
