Fix typing and nomenclature

--- a/join_close_ends.ipynb
+++ b/join_close_ends.ipynb
@@ -161,6 +161,8 @@
     "        fully_connected=True,  # allow diagonal moves\n",
     "    )\n",
     "\n",
+    "    cost = float(cost)\n",
+    "\n",
     "    # Convert the path back to the original image coordinates\n",
     "    path = [(y + min_y, x + min_x) for y, x in path]\n",
     "    # Convert to numpy array for easier indexing\n",
@@ -199,7 +201,9 @@
     "\n",
     "\n",
     "def group_connectionpoints(\n",
-    "    connectionpoints: dict[int, Endpoint | Junctionpoint], close_pairs: list[int, int, float], draw_graph: bool = False\n",
+    "    connectionpoints: dict[int, Endpoint | Junctionpoint],\n",
+    "    close_pairs: list[tuple[int, int, float]],\n",
+    "    draw_graph: bool = False,\n",
     ") -> dict[int, ConnectionGroup]:\n",
     "    \"\"\"\n",
     "    Group connectionpoints into connection groups based on interconnections.\n",
