Delete junctions when there are only two endpoints

--- a/join_close_ends.ipynb
+++ b/join_close_ends.ipynb
@@ -86,7 +86,25 @@
     "    endpoints: dict[int, Endpoint] = Field(default_factory=dict)\n",
     "    junctionpoints: dict[int, Junctionpoint] = Field(default_factory=dict)\n",
     "    hard_connected_endpoints: list[tuple[int, int, float]] = Field(default_factory=list)\n",
-    "    close_connectionpoint_pairs: list[tuple[int, int]] = Field(default_factory=list)"
+    "    close_connectionpoint_pairs: list[tuple[int, int]] = Field(default_factory=list)\n",
+    "\n",
+    "    def remove_connectionpoint(self, connectionpoint_id: int) -> None:\n",
+    "        \"\"\"Remove a connectionpoint from the group by its ID.\"\"\"\n",
+    "        if connectionpoint_id in self.endpoints:\n",
+    "            del self.endpoints[connectionpoint_id]\n",
+    "        elif connectionpoint_id in self.junctionpoints:\n",
+    "            del self.junctionpoints[connectionpoint_id]\n",
+    "        # remove from the close pairs\n",
+    "        self.close_connectionpoint_pairs = [\n",
+    "            pair for pair in self.close_connectionpoint_pairs if connectionpoint_id not in pair\n",
+    "        ]\n",
+    "\n",
+    "    def remove_all_junctionpoints(self) -> None:\n",
+    "        \"\"\"Remove all junctionpoints from the group.\"\"\"\n",
+    "        # pylint: disable=no-member\n",
+    "        junctionpoint_ids = list(self.junctionpoints.keys())\n",
+    "        for junctionpoint_id in junctionpoint_ids:\n",
+    "            self.remove_connectionpoint(junctionpoint_id)"
    ]
   },
   {
@@ -475,8 +493,11 @@
     "            # done with this group, move on\n",
     "            continue\n",
     "\n",
-    "        # If there are only two endpoints and no junctions in the group, we can directly connect them.\n",
-    "        if len(connection_group.endpoints) == 2 and len(connection_group.junctionpoints) == 0:\n",
+    "        # If there are only 2 endpoints in the group remove the junctionpoints and connect the endpoints.\n",
+    "        if len(connection_group.endpoints) == 2:\n",
+    "\n",
+    "            # remove the junctionpoints from the group\n",
+    "            connection_group.remove_all_junctionpoints()\n",
     "\n",
     "            pair = connection_group.close_connectionpoint_pairs[0]\n",
     "            endpoint_1_id, endpoint_2_id = pair\n",
