Add contour length plotting

--- a/picoz-analysis.ipynb
+++ b/picoz-analysis.ipynb
@@ -51,7 +51,31 @@
     "\n",
     "# Load the data, lazily since the files are large?\n",
     "topo_files = list(dir_data.glob(\"*/**/*.topostats\"))\n",
-    "print(f\"found {len(topo_files)} topo files\")"
+    "print(f\"found {len(topo_files)} topo files\")\n",
+    "\n",
+    "# Load the corresponding statistics csv file\n",
+    "csv_grain_stats = dir_data / \"grain_statistics.csv\"\n",
+    "assert csv_grain_stats.exists(), f\"could not find grain stats csv at {csv_grain_stats}\"\n",
+    "df_grain_stats = pd.read_csv(csv_grain_stats)\n",
+    "print(f\"grain stats columns: {df_grain_stats.columns}\")\n",
+    "\n",
+    "# convert some columns to nanometres\n",
+    "df_grain_stats[\"total_contour_length\"] /= 1e-9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e33c3494",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot contour length distributions\n",
+    "sns.stripplot(data=df_grain_stats, x=\"basename\", y=\"total_contour_length\", s=2)\n",
+    "sns.violinplot(data=df_grain_stats, x=\"basename\", y=\"total_contour_length\", inner=None)\n",
+    "plt.xticks(rotation=90)\n",
+    "plt.title(\"Contour length distributions\")\n",
+    "plt.show()"
    ]
   }
  ],
