Drop grain_statistics.csv entries with total_contour_length < ~300

--- a/picoz-damage-analysis.ipynb
+++ b/picoz-damage-analysis.ipynb
@@ -75,8 +75,24 @@
     "sns.violinplot(data=df_grain_stats, x=\"basename\", y=\"total_contour_length\", inner=None)\n",
     "plt.xticks(rotation=90)\n",
     "plt.title(\"Contour length distributions\")\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# drop any rows with contour length less than a threshold\n",
+    "threshold_contour_length = 300\n",
+    "\n",
+    "n_rows_before = len(df_grain_stats)\n",
+    "df_grain_stats = df_grain_stats[df_grain_stats[\"total_contour_length\"] >= threshold_contour_length]\n",
+    "n_rows_after = len(df_grain_stats)\n",
+    "print(f\"dropped {n_rows_before - n_rows_after} rows with contour length < {threshold_contour_length} nm. remaining rows: {n_rows_after}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71bfd760",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
