--- a/picoz-damage-analysis.ipynb
+++ b/picoz-damage-analysis.ipynb
@@ -2,16 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import psutil\n",
     "import pickle\n",
     "import re\n",
     "from pathlib import Path\n",
+    "from typing import Generator\n",
     "\n",
+    "from hashlib import sha256\n",
     "import matplotlib.pyplot as plt\n",
+    "from pydantic import BaseModel, ConfigDict\n",
     "import numpy as np\n",
     "import numpy.typing as npt\n",
     "import pandas as pd\n",
@@ -20,15 +24,30 @@
     "from matplotlib.cm import ScalarMappable\n",
     "from matplotlib.colors import Normalize\n",
     "\n",
-    "from topostats.damage.damage import (Defect, DefectGap, OrderedDefectGapList,\n",
-    "                                     calculate_indirect_defect_gaps,\n",
-    "                                     get_defects_and_gaps_from_bool_array)\n",
+    "from topostats.damage.damage import (\n",
+    "    Defect,\n",
+    "    DefectGap,\n",
+    "    OrderedDefectGapList,\n",
+    "    calculate_indirect_defect_gaps,\n",
+    "    get_defects_and_gaps_from_bool_array,\n",
+    ")\n",
     "from topostats.io import LoadScans\n",
-    "from topostats.measure.curvature import (\n",
-    "    discrete_angle_difference_per_nm_circular, total_turn_in_region_radians)\n",
+    "from topostats.measure.curvature import discrete_angle_difference_per_nm_circular, total_turn_in_region_radians\n",
     "from topostats.tracing.splining import resample_points_regular_interval\n",
-    "from topostats.unet_masking import (\n",
-    "    make_bounding_box_square, pad_bounding_box_cutting_off_at_image_bounds)"
+    "from topostats.unet_masking import make_bounding_box_square, pad_bounding_box_cutting_off_at_image_bounds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f174edd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clear_output():\n",
+    "    from IPython.display import clear_output as ipy_clear_output\n",
+    "\n",
+    "    ipy_clear_output()"
    ]
   },
   {
@@ -39,22 +58,22 @@
    "outputs": [],
    "source": [
     "# Get the data directories set up\n",
-    "dir_base = Path(\n",
-    "    \"/Volumes/shared-1/pyne_group/Shared/AFM_Data/dna_damage/Cs137_irradiations/20260204-analysis-getting-back-into-the-project/\"\n",
-    ")\n",
+    "dir_base = Path(\"/Volumes/shared/pyne_group/Shared/AFM_Data/dna_damage/Cs137_irradiations\")\n",
     "assert dir_base.exists()\n",
-    "dir_data = dir_base / \"output\"\n",
-    "assert dir_data.exists()\n",
-    "dir_processed = dir_base / \"analysis_results\"\n",
-    "dir_processed.mkdir(exist_ok=True)\n",
-    "assert dir_processed.exists()\n",
+    "dir_this_analysis = dir_base / \"20260204-analysis-getting-back-into-the-project\"\n",
+    "assert dir_this_analysis.exists()\n",
+    "dir_processed_data = dir_this_analysis / \"output\"\n",
+    "assert dir_processed_data.exists()\n",
+    "dir_results = dir_this_analysis / \"analysis_results\"\n",
+    "dir_results.mkdir(exist_ok=True)\n",
+    "assert dir_results.exists()\n",
     "\n",
     "# Load the data, lazily since the files are large?\n",
-    "topo_files = list(dir_data.glob(\"*/**/*.topostats\"))\n",
+    "topo_files = list(dir_processed_data.glob(\"*/**/*.topostats\"))\n",
     "print(f\"found {len(topo_files)} topo files\")\n",
     "\n",
     "# Load the corresponding statistics csv file\n",
-    "csv_grain_stats = dir_data / \"grain_statistics.csv\"\n",
+    "csv_grain_stats = dir_processed_data / \"grain_statistics.csv\"\n",
     "assert csv_grain_stats.exists(), f\"could not find grain stats csv at {csv_grain_stats}\"\n",
     "df_grain_stats = pd.read_csv(csv_grain_stats)\n",
     "print(f\"grain stats columns: {df_grain_stats.columns}\")\n",
@@ -83,16 +102,36 @@
     "n_rows_before = len(df_grain_stats)\n",
     "df_grain_stats = df_grain_stats[df_grain_stats[\"total_contour_length\"] >= threshold_contour_length]\n",
     "n_rows_after = len(df_grain_stats)\n",
-    "print(f\"dropped {n_rows_before - n_rows_after} rows with contour length < {threshold_contour_length} nm. remaining rows: {n_rows_after}\")\n"
+    "print(\n",
+    "    f\"dropped {n_rows_before - n_rows_after} rows with contour length < {threshold_contour_length} nm. remaining rows: {n_rows_after}\"\n",
+    ")\n",
+    "\n",
+    "sns.stripplot(data=df_grain_stats, x=\"basename\", y=\"total_contour_length\", s=2)\n",
+    "sns.violinplot(data=df_grain_stats, x=\"basename\", y=\"total_contour_length\", inner=None)\n",
+    "plt.xticks(rotation=90)\n",
+    "plt.title(\"Contour length distributions\")\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71bfd760",
+   "id": "2fe3aedb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Function to check ram usage of the notebook\n",
+    "def notebook_ram_usage():\n",
+    "    process = psutil.Process()\n",
+    "    print(f\"process: {process}\")\n",
+    "    mem_info = process.memory_info()\n",
+    "    print(f\"memory info: {mem_info}\")\n",
+    "    ram_usage_gb = mem_info.rss / (1024**3)\n",
+    "    print(f\"RAM usage: {ram_usage_gb:.2f} GB\")\n",
+    "\n",
+    "\n",
+    "notebook_ram_usage()"
+   ]
   }
  ],
  "metadata": {
