Add grain data storage models

--- a/picoz-damage-analysis.ipynb
+++ b/picoz-damage-analysis.ipynb
@@ -132,6 +132,90 @@
     "\n",
     "notebook_ram_usage()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f5db1da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Models\n",
+    "class BaseDamageAnalysis(BaseModel):\n",
+    "    \"\"\"Data object to hold settings for Models used in the project.\"\"\"\n",
+    "\n",
+    "    model_config = ConfigDict(arbitrary_types_allowed=True)\n",
+    "\n",
+    "\n",
+    "class GrainModel(BaseDamageAnalysis):\n",
+    "    grain_id: int\n",
+    "    filename: str\n",
+    "    pixel_to_nm_scaling: float\n",
+    "    folder: str\n",
+    "    percent_damage: float\n",
+    "    bbox: tuple[int, int, int, int]\n",
+    "    image: npt.NDArray[np.float64]\n",
+    "    aspect_ratio: float\n",
+    "    smallest_bounding_area: float\n",
+    "    total_contour_length: float\n",
+    "    num_crossings: int\n",
+    "    molecule_data: dict[int, dict[str, npt.NDArray[np.float64]]]\n",
+    "    added_left: int\n",
+    "    added_top: int\n",
+    "    padding: int\n",
+    "    mask: npt.NDArray[np.bool_]\n",
+    "    node_coords: npt.NDArray[np.float64]\n",
+    "    num_nodes: int\n",
+    "\n",
+    "\n",
+    "class GrainModelCollection(BaseDamageAnalysis):\n",
+    "    grains: dict[int, GrainModel]\n",
+    "\n",
+    "    def __getitem__(self, key: int) -> GrainModel:\n",
+    "        return self.grains[key]\n",
+    "\n",
+    "    def __iter__(self) -> Generator[tuple[int, GrainModel], None, None]:\n",
+    "        return (item for item in self.grains.items())\n",
+    "\n",
+    "    def __len__(self) -> int:\n",
+    "        return len(self.grains)\n",
+    "\n",
+    "    def __contains__(self, key: int) -> bool:\n",
+    "        return key in self.grains\n",
+    "\n",
+    "    def items(self) -> Generator[tuple[int, GrainModel], None, None]:\n",
+    "        return (item for item in self.grains.items())\n",
+    "\n",
+    "    def keys(self) -> Generator[int, None, None]:\n",
+    "        return (key for key in self.grains.keys())\n",
+    "\n",
+    "    def values(self) -> Generator[GrainModel, None, None]:\n",
+    "        return (value for value in self.grains.values())\n",
+    "\n",
+    "    def get(self, key: int, default: GrainModel | None = None) -> GrainModel | None:\n",
+    "        return self.grains.get(key, default)\n",
+    "\n",
+    "    def add_grain(self, grain: GrainModel) -> None:\n",
+    "        # Check if the grain ID already exists in the collection\n",
+    "        if grain.grain_id in self.grains:\n",
+    "            raise ValueError(f\"Grain with ID {grain.grain_id} already exists in the collection.\")\n",
+    "        self.grains[grain.grain_id] = grain\n",
+    "\n",
+    "    def remove_grain(self, grain_id: int) -> None:\n",
+    "        if grain_id not in self.grains:\n",
+    "            raise KeyError(f\"Grain with ID {grain_id} does not exist in the collection.\")\n",
+    "        del self.grains[grain_id]\n",
+    "\n",
+    "\n",
+    "def combine_grain_model_collections(collections: list[GrainModelCollection]) -> GrainModelCollection:\n",
+    "    combined_collection = GrainModelCollection(grains={})\n",
+    "    for collection in collections:\n",
+    "        for grain_id, grain in collection.items():\n",
+    "            if grain_id in combined_collection:\n",
+    "                raise ValueError(f\"Duplicate grain ID {grain_id} found in multiple collections.\")\n",
+    "            combined_collection.add_grain(grain)\n",
+    "    return combined_collection"
+   ]
   }
  ],
  "metadata": {
