Add topostats files grain data loader

--- a/picoz-damage-analysis.ipynb
+++ b/picoz-damage-analysis.ipynb
@@ -216,6 +216,148 @@
     "            combined_collection.add_grain(grain)\n",
     "    return combined_collection"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31445145",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the files\n",
+    "def load_grain_models_from_topo_files(\n",
+    "    topo_files: list[Path],\n",
+    "    df_grain_stats: pd.DataFrame,\n",
+    "    bbox_padding: int,\n",
+    "    sample_type: str,\n",
+    ") -> GrainModelCollection:\n",
+    "    grain_model_collection = GrainModelCollection(grains={})\n",
+    "    loadscans = LoadScans(img_paths=topo_files, channel=\"dummy\")\n",
+    "    loadscans.get_data()\n",
+    "    loadscans_img_dict = loadscans.img_dict\n",
+    "    for filename, file_data in loadscans_img_dict.items():\n",
+    "        df_grain_stats_image = df_grain_stats[df_grain_stats[\"image\"] == filename]\n",
+    "        full_image = file_data[\"image\"]\n",
+    "        full_mask = file_data[\"grain_tensors\"][\"above\"]\n",
+    "        pixel_to_nm_scaling = file_data[\"pixel_to_nm_scaling\"]\n",
+    "        ordered_trace_data = file_data[\"ordered_traces\"][\"above\"]\n",
+    "        try:\n",
+    "            nodestats_data = file_data[\"nodestats\"][\"above\"][\"stats\"]\n",
+    "        except KeyError:\n",
+    "            nodestats_data = None\n",
+    "        for current_grain_id_str, grain_ordered_trace_data in ordered_trace_data.items():\n",
+    "            grain_id = int(re.sub(r\"grain_\", \"\", current_grain_id_str))\n",
+    "            df_grain_stats_grain = df_grain_stats_image[df_grain_stats_image[\"grain_number\"] == grain_id]\n",
+    "            # get the irradiation dose from the folder path in the form \"{dose_percentage}_percent_damage\"\n",
+    "            if \"Controls\" in sample_type:\n",
+    "                dose_percentage = 0\n",
+    "            else:\n",
+    "                dose_percentage_match = re.search(r\"(\\d+)_percent_damage\", str(sample_type))\n",
+    "                if dose_percentage_match:\n",
+    "                    dose_percentage = int(dose_percentage_match.group(1))\n",
+    "                else:\n",
+    "                    raise ValueError(f\"could not extract dose percentage from folder path {sample_type}\")\n",
+    "            smallest_bounding_area = df_grain_stats_grain[\"smallest_bounding_area\"].values[0]\n",
+    "            aspect_ratio = df_grain_stats_grain[\"aspect_ratio\"].values[0]\n",
+    "            total_contour_length = df_grain_stats_grain[\"total_contour_length\"].values[0]\n",
+    "            num_crossings = df_grain_stats_grain[\"num_crossings\"].values[0]\n",
+    "\n",
+    "            all_molecule_data = {}\n",
+    "            for current_molecule_id_str, molecule_ordered_trace_data in grain_ordered_trace_data.items():\n",
+    "                molecule_data = {}\n",
+    "                molecule_id = int(re.sub(r\"mol_\", \"\", current_molecule_id_str))\n",
+    "                ordered_coords = molecule_ordered_trace_data[\"ordered_coords\"]\n",
+    "                molecule_data[\"heights\"] = molecule_ordered_trace_data[\"heights\"]\n",
+    "                molecule_data[\"distances\"] = molecule_ordered_trace_data[\"distances\"]\n",
+    "                molecule_data[\"circular\"] = molecule_ordered_trace_data[\"mol_stats\"][\"circular\"]\n",
+    "                bbox = molecule_ordered_trace_data[\"bbox\"]\n",
+    "\n",
+    "                splining_coords = file_data[\"splining\"][\"above\"][current_grain_id_str][current_molecule_id_str][\n",
+    "                    \"spline_coords\"\n",
+    "                ]\n",
+    "                curvatures = file_data[\"grain_curvature_stats\"][\"above\"][current_grain_id_str][current_molecule_id_str]\n",
+    "                molecule_data[\"curvatures\"] = curvatures\n",
+    "\n",
+    "                # bbox will be the same for all molecules so this is okay\n",
+    "                bbox_square = make_bounding_box_square(\n",
+    "                    crop_min_row=bbox[0], crop_min_col=bbox[1], crop_max_row=bbox[2], crop_max_col=bbox[3]\n",
+    "                )\n",
+    "                bbox_padded = pad_bounding_box_cutting_off_at_image_bounds(\n",
+    "                    crop_min_row=bbox_square[0],\n",
+    "                    crop_min_col=bbox_square[1],\n",
+    "                    crop_max_row=bbox_square[2],\n",
+    "                    crop_max_col=bbox_square[3],\n",
+    "                    image_shape=full_image.shape,\n",
+    "                    padding=bbox_padding,\n",
+    "                )\n",
+    "                added_left = bbox_padded[1] - bbox[1]\n",
+    "                added_top = bbox_padded[0] - bbox[0]\n",
+    "\n",
+    "                # adjust the splining coords to account for padding\n",
+    "                splining_coords[:, 0] -= added_top\n",
+    "                splining_coords[:, 1] -= added_left\n",
+    "                molecule_data[\"spline_coords\"] = splining_coords\n",
+    "\n",
+    "                # adjust the ordered coords to account for padding\n",
+    "                ordered_coords[:, 0] -= added_top\n",
+    "                ordered_coords[:, 1] -= added_left\n",
+    "                molecule_data[\"ordered_coords\"] = ordered_coords\n",
+    "\n",
+    "                all_molecule_data[molecule_id] = molecule_data\n",
+    "\n",
+    "            mask = full_mask[\n",
+    "                bbox_padded[0] : bbox_padded[2],\n",
+    "                bbox_padded[1] : bbox_padded[3],\n",
+    "            ]\n",
+    "\n",
+    "            image = full_image[\n",
+    "                bbox_padded[0] : bbox_padded[2],\n",
+    "                bbox_padded[1] : bbox_padded[3],\n",
+    "            ]\n",
+    "\n",
+    "            all_node_coords = []\n",
+    "            num_nodes: int = 0\n",
+    "            if nodestats_data is not None:\n",
+    "                try:\n",
+    "                    grain_nodestats_data = nodestats_data[current_grain_id_str]\n",
+    "                    num_nodes = len(grain_nodestats_data)\n",
+    "                    for _node_index, node_data in grain_nodestats_data.items():\n",
+    "                        node_coords = node_data[\"coords\"]\n",
+    "                        # adjust the node coords to account for padding\n",
+    "                        node_coords[:, 0] -= added_top\n",
+    "                        node_coords[:, 1] -= added_left\n",
+    "                        for node_coord in node_coords:\n",
+    "                            all_node_coords.append(node_coord)\n",
+    "                except KeyError as e:\n",
+    "                    if \"grain_\" in str(e):\n",
+    "                        # grain has no nodestats data here, skip\n",
+    "                        pass\n",
+    "            all_node_coords_array = np.array(all_node_coords)\n",
+    "\n",
+    "            grain_model = GrainModel(\n",
+    "                grain_id=grain_id,\n",
+    "                filename=filename,\n",
+    "                pixel_to_nm_scaling=pixel_to_nm_scaling,\n",
+    "                folder=str(sample_type),\n",
+    "                percent_damage=dose_percentage,\n",
+    "                bbox=bbox_padded,\n",
+    "                image=image,\n",
+    "                mask=mask,\n",
+    "                aspect_ratio=aspect_ratio,\n",
+    "                total_contour_length=total_contour_length,\n",
+    "                num_crossings=num_crossings,\n",
+    "                molecule_data=all_molecule_data,\n",
+    "                added_left=added_left,\n",
+    "                added_top=added_top,\n",
+    "                padding=bbox_padding,\n",
+    "                node_coords=all_node_coords_array,\n",
+    "                num_nodes=num_nodes,\n",
+    "                smallest_bounding_area=smallest_bounding_area,\n",
+    "            )\n",
+    "\n",
+    "            grain_model_collection.add_grain(grain_model)\n",
+    "    return grain_model_collection"
+   ]
   }
  ],
  "metadata": {
